tests/baselines/reference/superCallFromClassThatDerivesFromGenericTypeButWithNoTypeArguments1.errors.txt
tests/cases/compiler/superCallFromClassThatDerivesFromGenericTypeButWithNoTypeArguments1.ts(8,17): error TS2314: Generic type 'A<T1, T2>' requires 2 type argument(s).
tests/cases/compiler/superCallFromClassThatDerivesFromGenericTypeButWithNoTypeArguments1.ts(9,21): error TS2335: 'super' can only be referenced in a derived class.


==== tests/cases/compiler/superCallFromClassThatDerivesFromGenericTypeButWithNoTypeArguments1.ts (2 errors) ====
    
    class A<T1, T2> {
        constructor(private map: (value: T1) => T2) {
    
        }
    }
    
    class B extends A {
                    ~
!!! error TS2314: Generic type 'A<T1, T2>' requires 2 type argument(s).
        constructor() { super(value => String(value)); }
                        ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
    }